<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout


    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/lightcream"
    tools:context=".Activity.MainActivity">


    <androidx.core.widget.NestedScrollView
        android:id="@+id/nestedScrollView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginBottom="70dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.5">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="16dp"
                android:layout_marginTop="50dp"
                android:orientation="horizontal">

                <EditText
                    android:id="@+id/edt_txt_srch"
                    android:layout_width="0dp"
                    android:layout_height="50dp"
                    android:layout_weight="1"
                    android:background="@drawable/white_round_corner_bg"
                    android:drawableStart="@drawable/search_icon"
                    android:ems="10"
                    android:hint="@string/search_anything"
                    android:inputType="text"
                    android:padding="8dp"

                    style="@style/ciclular"

                    android:textColor="@color/black"
                    android:textColorHint="@color/DarkGrey" />

                <ImageView
                    android:id="@+id/img_srch_icon"
                    android:layout_width="50dp"
                    android:layout_height="50dp"

                    android:layout_marginStart="16dp"
                    android:background="@drawable/brown_full_corner_bg"
                    android:padding="10dp"
                    app:srcCompat="@drawable/settings" />
            </LinearLayout>


            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="16dp"   >

                <com.google.android.material.imageview.ShapeableImageView
                    android:id="@+id/img_banner"
                    android:layout_width="0dp"
                    android:layout_height="170dp"
                    android:scaleType="fitXY"

                    app:shapeAppearanceOverlay="@style/ciclular"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.0"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintVertical_bias="0.0"
                    tools:srcCompat="@tools:sample/backgrounds/scenic" />

                <ProgressBar
                    android:id="@+id/progressBar"
                    style="?android:attr/progressBarStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:indeterminateTint="@color/orange"
                    android:indeterminateTintMode="src_in"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.491"
                    app:layout_constraintStart_toStartOf="@+id/img_banner"
                    app:layout_constraintTop_toTopOf="@+id/img_banner"


                    />


            </androidx.constraintlayout.widget.ConstraintLayout>


            <TextView
                android:id="@+id/txt_cat"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="18dp"
                android:text="@string/category"
                android:textColor="@color/DarkBrown"

                android:textSize="18sp"
                android:textStyle="bold" />


            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"

                >

                <androidx.recyclerview.widget.RecyclerView


                    android:id="@+id/recyclerView1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:clipToPadding="false"
                    android:paddingStart="8dp"
                    android:paddingEnd="8dp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintVertical_bias="1.0" />

                <ProgressBar
                    android:id="@+id/progressBar2"
                    style="?android:attr/progressBarStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:indeterminateTint="@color/orange"
                    android:indeterminateTintMode="src_in"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.5"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintVertical_bias="0.5" />


            </androidx.constraintlayout.widget.ConstraintLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal"
                android:layout_marginTop="20dp"
                >

                <TextView
                    android:id="@+id/txt_popular"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="16dp"
                    android:layout_weight="1"
                    android:text="@string/popular_coffees"
                    android:textSize="20dp"
                    android:textStyle="bold"
                    android:textColor="@color/DarkBrown"


                    />

                <TextView

                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="16dp"
                    android:layout_weight="1"
                    android:textSize="16dp"
                    android:textStyle="italic"
                    android:text="@string/see_all"
                    android:textColor="@color/DarkBrown"



                    />
            </LinearLayout>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:minHeight="150dp"
                >


                <androidx.recyclerview.widget.RecyclerView

                    android:id="@+id/recyclerView2"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:clipToPadding="false"
                    android:paddingStart="8dp"
                    android:paddingEnd="8dp"
                    android:minHeight="150dp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"

                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintVertical_bias="1.0" />

                <ProgressBar
                    android:id="@+id/progressBar3"
                    style="?android:attr/progressBarStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:indeterminateTint="@color/orange"
                    android:indeterminateTintMode="src_in"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="@id/recyclerView2"
                    app:layout_constraintHorizontal_bias="0.5"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintVertical_bias="0.5" />


            </androidx.constraintlayout.widget.ConstraintLayout>

        </LinearLayout>


    </androidx.core.widget.NestedScrollView>


    <androidx.coordinatorlayout.widget.CoordinatorLayout
        android:layout_width="match_parent"
        android:layout_height="70dp"
        app:layout_constraintBottom_toBottomOf="parent"


        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/nestedScrollView"
        app:layout_constraintVertical_bias="0.5">
       <com.google.android.material.bottomnavigation.BottomNavigationView


            android:id="@+id/bottomNavigationView"
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:background="@color/DarkBrown"
            android:layout_gravity="bottom"

           >

           <LinearLayout
               android:layout_width="match_parent"
               android:layout_height="match_parent"
               android:layout_gravity="center_vertical"

               >
              <LinearLayout
                  android:id="@+id/exploreBtn"
                  android:layout_width="0dp"
                  android:layout_height="match_parent"
                  android:layout_weight="0.2"
                  android:orientation="vertical"
                  >
                  <ImageView

                      android:layout_marginTop="10dp"
                      android:layout_width="match_parent"
                      android:layout_height="wrap_content"
                     android:src="@drawable/btn_1"


                      />

                  <TextView
                      android:layout_width="match_parent"
                      android:layout_height="wrap_content"
                      android:layout_marginTop="2dp"
                      android:gravity="center_horizontal"
                      android:text="@string/explorer"
                      android:textColor="@color/white"
                      android:textSize="15sp" />



              </LinearLayout>

               <LinearLayout

                   android:id="@+id/cartBtn"
                   android:layout_width="0dp"
                   android:layout_height="match_parent"
                   android:layout_weight="0.2"
                   android:orientation="vertical"
                   >
                   <ImageView
                       android:id="@+id/img_cart"
                       android:layout_marginTop="10dp"
                       android:layout_width="match_parent"
                       android:layout_height="wrap_content"
                       android:src="@drawable/btn_2"


                       />

                   <TextView
                       android:layout_width="match_parent"
                       android:layout_height="wrap_content"
                       android:text="@string/cart"
                       android:textSize="15sp"
                       android:gravity="center_horizontal"
                       android:layout_marginTop="2dp"
                       android:textColor="@color/white"
                       />



               </LinearLayout>
               <LinearLayout

                   android:id="@+id/favouriteBtn"
                   android:layout_width="0dp"
                   android:layout_height="match_parent"
                   android:layout_weight="0.2"
                   android:orientation="vertical"
                   >
                   <ImageView
                       android:id="@+id/img_favourite"
                       android:layout_marginTop="10dp"
                       android:layout_width="match_parent"
                       android:layout_height="wrap_content"
                       android:src="@drawable/btn_3"


                       />

                   <TextView
                       android:layout_width="match_parent"
                       android:layout_height="wrap_content"
                       android:text="@string/favourite"
                       android:textSize="15sp"
                       android:gravity="center_horizontal"
                       android:layout_marginTop="2dp"
                       android:textColor="@color/white"
                       />



               </LinearLayout>

               <LinearLayout
                   android:id="@+id/profileBtn"
                   android:layout_width="0dp"
                   android:layout_height="match_parent"
                   android:layout_weight="0.2"
                   android:orientation="vertical"
                   >
                   <ImageView

                       android:layout_marginTop="10dp"
                       android:layout_width="match_parent"
                       android:layout_height="wrap_content"
                       android:src="@drawable/btn_5"

                       />

                   <TextView
                       android:layout_width="match_parent"
                       android:layout_height="wrap_content"
                       android:text="@string/profile"
                       android:textSize="15sp"
                       android:gravity="center_horizontal"
                       android:layout_marginTop="2dp"
                       android:textColor="@color/white"
                       />

               </LinearLayout>

               <LinearLayout

                   android:id="@+id/contact_us"
                   android:layout_width="0dp"
                   android:layout_height="match_parent"
                   android:layout_weight="0.2"
                   android:orientation="vertical"
                   >
                   <ImageView
                       android:id="@+id/img_order"
                       android:layout_marginTop="10dp"
                       android:layout_width="match_parent"
                       android:layout_height="wrap_content"
                       android:src="@drawable/outline_diversity_3_24"
                       app:tint="@color/white"

                       />

                   <TextView
                       android:layout_width="match_parent"
                       android:layout_height="wrap_content"
                       android:text="About us"
                       android:textSize="15sp"
                       android:gravity="center_horizontal"
                       android:layout_marginTop="2dp"
                       android:textColor="@color/white"
                       />

               </LinearLayout>

           </LinearLayout>

       </com.google.android.material.bottomnavigation.BottomNavigationView>


    </androidx.coordinatorlayout.widget.CoordinatorLayout>
</androidx.constraintlayout.widget.ConstraintLayout>